syntax = "proto3";

package aicoreops_tree;
option go_package="./aicoreops_tree";

message Request {
  string ping = 1;
}

message Response {
  string pong = 1;
}

service Aicoreops_tree {
  rpc Ping(Request) returns(Response);
}
